# Wispr

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml
.cursor/rules/: aiogram.mdc
wispr_bot/: .env.example  __init__.py  __main__.py  bot.py  config.py  requirements.txt
wispr_bot/database/: __init__.py  db.py  schema.sql
wispr_bot/middlewares/: __init__.py  access.py
wispr_bot/models/: __init__.py  chat.py  user.py
wispr_bot/routers/: __init__.py  admin.py  chats.py  commands.py  images.py  settings.py
wispr_bot/services/: __init__.py  openai_service.py
wispr_bot/tests/: __init__.py  conftest.py  test_access_middleware.py  test_models.py  test_openai_service.py
wispr_bot/utils/: __init__.py  logger.py
