[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wispr-bot"
version = "0.1.0"
description = "Telegram bot for proxying requests to OpenAI's ChatGPT models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wispr Bot Developer", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "aiohttp>=3.8.0",
    "python-telegram-bot>=20.0.0",
    "alembic>=1.11.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wispr-bot"
"Bug Tracker" = "https://github.com/yourusername/wispr-bot/issues"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["wispr_bot/tests"]
python_files = "test_*.py"
python_functions = "test_*" 